added jellyfin install and graphics card passthrough

--- a/Jellyfin/1.JellyfinLXCInstall.md
+++ b/Jellyfin/1.JellyfinLXCInstall.md
@@ -12,10 +12,20 @@ Jellyfin Media Server Interface: IP:8096
 FFmpeg path: /usr/lib/jellyfin-ffmpeg/ffmpeg
 ```
 
-2. Once installed, mount the media share of smb or local directory to the LXC, you can find the mount process in the below folders.
-
+2. Once installed, shutdown the lxc and mount the media share of smb or local directory to the LXC, you can find the mount process here.
 ```
 
 ```
 
-3. Install
+3. Once mountpoint is added to the lxc, now check if the media is available by going to the path where mountpoint is set, you can find all your media collections from the SMB share.
+
+
+4. Next step is to passthrough the nvidia graphics card to the lxc, In order to do the passthrough follow the below guide.
+
+
+5. Make sure the transcoding is happening via the nvidia graphics card by below command:
+
+```
+nvidia-smi -l 10
+
+```
