--- a/Jellyfin/2.smbmountanddirectory.md
+++ b/Jellyfin/2.smbmountanddirectory.md
@@ -1,4 +1,27 @@
-#Mount SMB to Proxmox and add it as a directory
+
+###Mount SMB to Proxmox and add it as a directory
+
+
+#Process 1:
+
+
+1. Using Web UI, go to the Proxmox -> DataCenter -> Storage -> add
+
+2. From the drop down select SMB/CIFS and add the smb login details along with the path of the smb share and subfolders if needed. You can provide id as needed for you naming. The folder in the shell can be found /mnt/pve/pathyoudefined/id 
+
+```
+  Eg path: /mnt/pve/movies/
+```
+
+3. Now the storage is added as smb server, you can use it to mount to the lxc directly by using the next readme for mount smbshare to lxc.
+
+
+
+
+
+
+#Process 2:
+
 1. Open a shell in proxmox
 
 2. create a mount directory to mount the share using following command
