--- a/JellyfinLXC/1.JellyfinLXCInstall.md
+++ b/JellyfinLXC/1.JellyfinLXCInstall.md
@@ -14,6 +14,9 @@ FFmpeg path: /usr/lib/jellyfin-ffmpeg/ffmpeg
 
 2. Once installed, shutdown the lxc and mount the media share of smb or local directory to the LXC, you can find the mount process here.
 ```
+Step 1: [add smb share as storage to data center](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/2.smbmountanddirectory.md)
+
+Step 2: [mount smb share to lxc](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/3.mountsmbsharetolxc.md)
 
 ```
 
