--- a/JellyfinLXC/1.JellyfinLXCInstall.md
+++ b/JellyfinLXC/1.JellyfinLXCInstall.md
@@ -13,12 +13,12 @@ FFmpeg path: /usr/lib/jellyfin-ffmpeg/ffmpeg
 ```
 
 2. Once installed, shutdown the lxc and mount the media share of smb or local directory to the LXC, you can find the mount process here.
-```
-Step 1: [add smb share as storage to data center](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/2.smbmountanddirectory.md)
 
-Step 2: [mount smb share to lxc](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/3.mountsmbsharetolxc.md)
+>Step 1: [add smb share as storage to data center](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/2.smbmountanddirectory.md)
 
-```
+>Step 2: [mount smb share to lxc](https://github.com/mastan30/HomeLab-Setup/blob/main/JellyfinLXC/3.mountsmbsharetolxc.md)
+
+
 
 3. Once mountpoint is added to the lxc, now check if the media is available by going to the path where mountpoint is set, you can find all your media collections from the SMB share.
 
