added jellyfin install and graphics card passthrough

--- a/JellyfinLXC/2.smbmountanddirectory.md
+++ b/JellyfinLXC/2.smbmountanddirectory.md
@@ -1,5 +1,5 @@
 
-###Mount SMB to Proxmox and add it as a directory
+                          #Mount SMB to Proxmox and add it as a directory
 
 
 #Process 1:
