--- a/JellyfinLXC/3.mountsmbsharetolxc.md
+++ b/JellyfinLXC/3.mountsmbsharetolxc.md
@@ -1,4 +1,4 @@
-### Mount the SMB Share mount to LXC Container of Jellyfin/Emby/Plex etc...
+                  #Mount the SMB Share mount to LXC Container of Jellyfin/Emby/Plex etc...
 
 1. Stop the LXC container where you want to mount the smb share mount
 
