added jellyfin install and graphics card passthrough

--- a/JellyfinLXC/2.smbmountanddirectory.md
+++ b/JellyfinLXC/2.smbmountanddirectory.md
@@ -1,17 +1,16 @@
+# Mount SMB to Proxmox and add it as a directory
 
-                          #Mount SMB to Proxmox and add it as a directory
 
-
-#Process 1:
+## Process 1:
 
 
 1. Using Web UI, go to the Proxmox -> DataCenter -> Storage -> add
 
 2. From the drop down select SMB/CIFS and add the smb login details along with the path of the smb share and subfolders if needed. You can provide id as needed for you naming. The folder in the shell can be found /mnt/pve/pathyoudefined/id 
 
-```
-  Eg path: /mnt/pve/movies/
-```
+		```
+		  Eg path: /mnt/pve/movies/
+		```
 
 3. Now the storage is added as smb server, you can use it to mount to the lxc directly by using the next readme for mount smbshare to lxc.
 
@@ -20,29 +19,29 @@
 
 
 
-#Process 2:
+## Process 2:
 
 1. Open a shell in proxmox
 
 2. create a mount directory to mount the share using following command
 
-```
-mkdir /media/share
-```
+	```
+	mkdir /media/share
+	```
 
 3. Check if you can access the SMB using the following command:
 
-```
-smbclient -L $ipaddressofSMBserver -U "$smbusername"
-```
+	```
+	smbclient -L $ipaddressofSMBserver -U "$smbusername"
+	```
 
 
 4. once you are able to list the shares from the smb server, use the following command to mount the smb into the proxmox
 
 
-```
-sudo mount -t cifs -o username="$smbusername",password=$smbpassword //<$ipaddressofSMBserver>/USB2 /mount/path/
-```
+	```
+	sudo mount -t cifs -o username="$smbusername",password=$smbpassword //<$ipaddressofSMBserver>/USB2 /mount/path/
+	```
 
 5. Once the command is successful cd into the directory of mount and do a ls to see all the shares.
 
