update lxc with new mount points

--- a/JellyfinLXC/1.JellyfinLXCInstall.md
+++ b/JellyfinLXC/1.JellyfinLXCInstall.md
@@ -28,6 +28,9 @@
 
 4. Next step is to passthrough the nvidia graphics card to the lxc, In order to do the passthrough follow the below guide.
 
+  > [Nvidia graphics passthrough](https://gist.github.com/egg82/90164a31db6b71d36fa4f4056bbee2eb_
+  > [Nivdia graphics passthrough video](https://www.youtube.com/watch?v=-Us8KPOhOCY)
+
 
 5. Make sure the transcoding is happening via the nvidia graphics card by below command:
 
