added hardware transcoding process for immich

--- a/Immich-docker/1.Immich-docker.md
+++ b/Immich-docker/1.Immich-docker.md
@@ -61,7 +61,7 @@
 	```
    This will mount the SMB share into the Proxmox host, now check the mount directory permissions by doing ls -al and check if the mount has the permissions of assigned uid and gid. If not do a reboot of the host and it takes care of it.
    
-3. Shutdown the container and mount the SMB share to the proxmox LXC by following commands:
+6. Shutdown the container and mount the SMB share to the proxmox LXC by following commands:
 
    ```
     pct set 100 -mp0 /mnt/bindmounts/shared,mp=/shared
@@ -69,9 +69,9 @@
    ```
     eg: pct set 100 -mp0 /mnt/pve/immichtest/ ,mp=/immichtest/   - 100 is the lxc id
    
-4. Start the container and check the if the mount point is assigned with right uid and gid inside the container.
+7. Start the container and check the if the mount point is assigned with right uid and gid inside the container.
 
-5. Now in the LXC create a folder using following commands
+8. Now in the LXC create a folder using following commands
 
    ```
      mkdir ./immich/
@@ -83,5 +83,74 @@
    ```
       https://immich.app/docs/install/docker-compose
    ```
+   
+   Run the docker compose and follow the immichi guide to setup your albums and libraries as required.
+   
+   
+9. Optinally in order to add hardware acceleration, I used NVIDIA acceleration. In order to get it working here are the steps to follow:
+   
+   Next step is to passthrough the nvidia graphics card to the lxc, In order to do the passthrough follow the below guide.
+   
+   > [Nvidia graphics passthrough](https://gist.github.com/egg82/90164a31db6b71d36fa4f4056bbee2eb_
+   > [Nivdia graphics passthrough video](https://www.youtube.com/watch?v=-Us8KPOhOCY)
+   
+   I have already installed NVIDIA drivers for jellyfin lxc in proxmox host, so I just installed the nvidia drivers in container using below commands:
+   
+   ```
+    wget https://us.download.nvidia.com/XFree86/Linux-x86_64/535.146.02/NVIDIA-Linux-x86_64-{Latest-version}.run
+   ```
+    you can get the NVIDIA latest driver url from here : https://www.nvidia.com/Download/index.aspx
+	
+   once downloaded install the drivers (The --no-kernel-module module is used as already there's kernel installed ):
+   ```
+   chmod +x NVIDIA-Linux-x86_64-{Latest-version}.run
+   
+   ./NVIDIA-Linux-x86_64-{Latest-version}.run ----no-kernel-module
+   ```
+   
+   once installed make sure the drivers are installed by running:
+   ```
+   nvidia-smi -l 10
+   ```
+   
+10. Now we need to pass through the hardware acceleration to docker container by following the immich guide:
+    
+	```
+	https://immich.app/docs/features/hardware-transcoding
+    ```
+	
+	In order to have the driver passed to container, we need to have nvidia container toolkit installed using the following commands in the container:
+	(https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/latest/install-guide.html)
+	
+	```
+	curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \
+    && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \
+    sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \
+    sudo tee /etc/apt/sources.list.d/nvidia-container-toolkit.list
+	
+	
+	
+	sed -i -e '/experimental/ s/^#//g' /etc/apt/sources.list.d/nvidia-container-toolkit.list
+	
+	
+	
+	sudo apt-get update
+	
+	
+	sudo apt-get install -y nvidia-container-toolkit
+	
+	
+	```
+	
+	Also one other step I needed to do to make sure the docker compose works with hardware-transcoding is to modify nvidia config using below commands in container:
+	
+	Edit /etc/nvidia-container-runtime/config.toml and disable cgroups:
+	```
+      
+	  vi /etc/nvidia-container-runtime/config.toml
+	  
+	  set no-cgroups = true in the config.toml file, save and reboot the container. Now run the docker compose for immich.
+
+	```
 
 
