--- a/Immich-docker/1.Immich-docker.md
+++ b/Immich-docker/1.Immich-docker.md
@@ -152,5 +152,19 @@
 	  set no-cgroups = true in the config.toml file, save and reboot the container. Now run the docker compose for immich.
 
 	```
+	
+	
+	
+	References:
+	
+	https://immich.app/docs/install/script
+	
+	https://forum.proxmox.com/threads/how-to-automatically-mount-a-smb-share-on-an-lxc.118220/
 
-
+    https://immich.app/docs/features/hardware-transcoding
+	
+	https://www.reddit.com/r/Proxmox/comments/s0ud5y/comment/jl4lef2/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button
+	
+	<blockquote class="reddit-embed-bq" data-embed-height="348"><a href="https://www.reddit.com/r/Proxmox/comments/s0ud5y/comment/jl4lef2/">Comment</a><br> by<a href="https://www.reddit.com/user/Masterofchicken/">u/Masterofchicken</a> from discussion<a href="https://www.reddit.com/r/Proxmox/comments/s0ud5y/cgroups2_problem_with_nvidiacontainercli/"><no value=""></no></a><br> in<a href="https://www.reddit.com/r/Proxmox/">Proxmox</a></blockquote><script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script>
+     
+	 
